Cleaned alert and console output

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!--<script type="text/javascript" src="problem1.js"></script>
+<script type="text/javascript" src="problem1.js"></script>
 <script type="text/javascript" src="problem2.js"></script>
 <script type="text/javascript" src="problem3.js"></script>
 <script type="text/javascript" src="problem4.js"></script>
 <script type="text/javascript" src="problem5.js"></script>
-<script type="text/javascript" src="problem6.js"></script>-->
+<script type="text/javascript" src="problem6.js"></script>
 <script type="text/javascript" src="problem7.js"></script>
